packages/pro/table/style/index.less
@import '../../style/variable/index.less';
@import '../../../components/style/variable/index.less';

.@{pro-table-prefix} {
  // .reset-component();

  &-dnd-sortable-drag-handle {
    font-size: var(--ix-font-size-icon);
  }

  &-layout-tool {
    .@{header-prefix} {
      padding-bottom: 0;

      &-title {
        color: var(--ix-color-text);
        font-weight: var(--ix-font-weight-md);
      }
    }

    &-header {
      &-icon {
        color: var(--ix-color-text);

        &:hover {
          color: var(--ix-color-icon-hover);
        }

        &&-active {
          color: var(--ix-color-icon-active);
        }
      }
    }

    &-search-wrapper {
      padding-top: var(--ix-padding-size-xs);
      padding-bottom: var(--ix-padding-size-xs);
    }

    &-select-wrapper {
      display: flex;
      align-items: center;
      justify-content: space-between;
      height: var(--ix-height-md);

      .@{checkbox-prefix}-input {
        margin-left: 4px;
      }
    }

    &-tree {
      &-wrapper {
        max-height: 320px;
        overflow: auto;

        &:not(&-with-children) {
          .@{tree-prefix} {
            &-node-expand-noop {
              width: 0;
            }
          }
        }

        .@{tree-prefix} {
          &-node {
            &-content-label {
              padding: 0;
            }
            &-content-suffix {
              visibility: hidden;

              .@{icon-prefix} {
                padding: var(--ix-padding-size-xs);
              }
            }

            &:hover .@{tree-prefix}-node-content-suffix {
              visibility: visible;
            }
          }

          .@{empty-prefix} {
            margin: 0;
          }
        }
      }

      &-title {
        height: var(--ix-height-sm);
        line-height: var(--ix-height-sm);
      }
    }
  }

  .@{table-prefix}-container {
    .@{pro-table-prefix}-layout-tool-trigger {
      position: absolute;
      right: 1px;
      top: 1px;
      padding: 0 calc(var(--ix-padding-size-sm) - 1px);
      z-index: 10;
      font-size: var(--ix-font-size-icon);
      color: var(--ix-table-head-color);
      background-color: var(--ix-color-emphasized-container-bg);
      cursor: pointer;

      &::before {
        position: absolute;
        top: 50%;
        left: 0;
        width: 1px;
        background-color: rgb(0 0 0 / 6%);
        transform: translateY(-50%);
        content: '';
      }
    }

    &.@{table-prefix}-scroll-vertical {
      .@{pro-table-prefix}-layout-tool-trigger + .@{table-prefix}-fixed-holder {
        table > thead > tr:first-child {
          th:nth-last-of-type(2) .@{table-prefix}-cell-triggers {
            padding-right: 30px;
          }
        }
      }
    }

    &:not(.@{table-prefix}-scroll-vertical) {
      .@{pro-table-prefix}-layout-tool-trigger + .@{table-prefix}-content {
        table > thead > tr:first-child {
          th:last-child > .@{table-prefix}-cell-triggers {
            padding-right: 38px;
          }
        }
      }
    }
  }

  &.@{table-prefix} tbody tr.@{pro-table-prefix}-row-dragging-over {
    &-top {
      position: relative;
      td::before {
        position: absolute;
        content: '';
        top: calc(-0.5 * (var(--ix-line-width-bold) + 1px));
        left: 0;
        right: 0;
        height: var(--ix-line-width-bold);
        background-color: var(--ix-color-primary-hover);
      }

      &:first-child td::before {
        top: 0;
      }
    }
    &-bottom {
      position: relative;
      td::before {
        position: absolute;
        content: '';
        bottom: calc(-0.5 * (var(--ix-line-width-bold) + 1px));
        left: 0;
        right: 0;
        height: var(--ix-line-width-bold);
        background-color: var(--ix-color-primary-hover);
      }

      &:last-child td::before {
        bottom: 0;
      }
    }
  }

  &.@{table-prefix}-lg .@{table-prefix}-container .@{pro-table-prefix}-layout-tool-trigger {
    line-height: calc(var(--ix-table-head-row-height-lg) - 2px);
    &::before {
      height: calc(var(--ix-table-head-row-height-lg) / 2);
    }
  }

  &.@{table-prefix}-md .@{table-prefix}-container .@{pro-table-prefix}-layout-tool-trigger {
    line-height: calc(var(--ix-table-head-row-height-md) - 2px);

    &::before {
      height: calc(var(--ix-table-head-row-height-md) / 2);
    }
  }

  &.@{table-prefix}-sm .@{table-prefix}-container .@{pro-table-prefix}-layout-tool-trigger {
    line-height: calc(var(--ix-table-head-row-height-sm) - 2px);

    &::before {
      height: calc(var(--ix-table-head-row-height-sm) / 2);
    }
  }

  .cdk-resizable {
    &-preview {
      position: absolute;
      top: 0;
      left: 0;
      z-index: 11;
      border-right: 2px var(--ix-line-type) var(--ix-color-border);
    }
  }
}

